syntax = "proto3";

// protoc --go_out=hashservice --go_opt=paths=source_relative --go-grpc_out=hashservice --go-grpc_opt=paths=source_relative proto/service.proto

package hashservice;

option go_package = "./hashservice";

service HashService {
    rpc CreateHash (HashRequest) returns (HashResponse);
    rpc GetHash (HashRequest) returns (HashResponse);
    rpc CheckHash (HashRequest) returns (HashResponseOther);
}

message HashRequest {
    string payload = 1;
}

message HashResponse {
    string hash = 1;
}

message HashResponseOther {
    bool exists = 1;
}